added button and waves, added hammerjs and velocity as dependencies of Materialize, tried toasts but filed

--- a/sample/src/components_section/buttons.html
+++ b/sample/src/components_section/buttons.html
@@ -2,8 +2,13 @@
     <p>Buttons</p>
     <br/>
     <br/>
-    <h1>raised</h1>
+    <h1>default</h1>
     <a material-button>default</a>
     <a material-button="raised: false;">flat</a>
     <a material-button="large: true;">large</a>
+    <br />
+    <h1>Waves</h1>
+    <a material-button waves>default</a>
+    <a material-button="raised: false;" waves>flat</a>
+    <a material-button="large: true;" waves>large</a>
 </template>
