--- a/sample/src/javascript_section/dialogs.html
+++ b/sample/src/javascript_section/dialogs.html
@@ -1,3 +1,5 @@
 <template>
-    <p>Not implemented</p>
+    <p>Dialogs</p>
+    <p>Toasts</p>
+    <a material-button click.trigger="showToast()">Toast!</a>
 </template>
