--- a/sample/src/javascript_section/waves.html
+++ b/sample/src/javascript_section/waves.html
@@ -1,3 +1,11 @@
 <template>
-    <p>Not implemented</p>
+  <p>Waves</p>
+  <br/>
+  <br/>
+  <a material-button waves>Waves on a button</a>
+  <a material-button waves="light.one-time: true;">Waves (light) on a button</a>
+  
+  <div waves style="display: block; margin: 10px 0; border: dotted 1px black; height: 80px; width: 120px; text-align: center; vertical-align: middle;">
+    Waves on a div.
+  </div>
 </template>
