--- a/sample/src/javascript_section/dialogs.html
+++ b/sample/src/javascript_section/dialogs.html
@@ -2,4 +2,6 @@
     <p>Dialogs</p>
     <p>Toasts</p>
     <a material-button click.trigger="showToast()">Toast!</a>
+    <p>Tooltips</p>
+    <a material-button material-tooltip="text: I am a tooltip!;">Tooltip</a>
 </template>
