--- a/sample/src/nav-bar.html
+++ b/sample/src/nav-bar.html
@@ -1,18 +1,19 @@
-<template>
-  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+<template bindable="router">
+  <div class="navbar-fixed">
+  <nav>
+    <div class="nav-wrapper">
+      <!--<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
         <span class="sr-only">Toggle Navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">
+      </button>-->
+      <a class="brand-logo" href="#">
         <img src="../images/materialize-logo_03_text.png">
       </a>
-    </div>
+    
 
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <!--<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li repeat.for="row of router.navigation" class="${row.isActive ? 'active' : ''}">
           <a data-toggle="collapse" data-target="#bs-example-navbar-collapse-1.in" href.bind="row.href">${row.title}</a>
@@ -24,6 +25,14 @@
           <i class="fa fa-spinner fa-spin fa-2x"></i>
         </li>
       </ul>
-    </div>
+    </div>-->
+    
+    <ul class="right hide-on-med-and-down">
+      <li repeat.for="row of router.navigation" class="${row.isActive ? 'active' : ''}">
+          <a href.bind="row.href">${row.title}</a>
+        </li>
+    </ul>
   </nav>
+  </div>
+  </div>
 </template>
